# fast-winding-number-soups

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UT_Array.cpp  UT_Array.h  UT_ArrayImpl.h  UT_BVH.h  UT_BVHImpl.h  UT_FixedVector.h  UT_ParallelUtil.h  UT_SmallArray.h  UT_SolidAngle.cpp  UT_SolidAngle.h  main.cpp  pig-head-Q.dmat  pig-head.ply
SYS/: SYS_Math.h  SYS_Types.h
VM/: VM_SIMD.h  VM_SSEFunc.h
cmake/: FindLIBIGL.cmake
